# CordeliaWebApp

./: .gitignore  README.md  pyproject.toml  requirements.txt
cordelia/: __init__.py  admin.py  auth.py  dataframe.py  db.py  excel.py  forms.py  home.py  models.py  plots.py  sample_data.py  sample_db.py
cordelia/admin/: admin.py  excel.py  plots.py
cordelia/api/: api.py  api_inventory.py  api_transactions.py
cordelia/static/: custom.js  styles.css  styles_grid.css
cordelia/templates/: authenticate.html  base.html  cart.html  catalog.html  checkout.html  home.html  inventory.html  login.html  register.html  rentInventory.html  update.html  userInventory.html
cordelia/templates/admin_views/: dashboard.html  db_customer.html  db_dress.html  db_maintenance.html  db_rent.html  db_sales.html  inventory.html  inventory_customer.html  inventory_dress.html  inventory_maintenance.html  inventory_rent.html  plots_template.html  rentInventory.html  update.html  userInventory.html
cordelia/templates/user_views/: cart.html  catalog.html
tests/: conftest.py  test_auth.py  test_factory.py  test_models.py
